V 0.91.48-wkd (2015-05-07 ff..)
- Feature Parkposition in Mitte von Heatbeat für Wartungszwecke aktiviert
- Anzeige Datum und Uhrzeit der letzten Compilierung beim Einschalten
- Feature Autopause bei Druck < 200 (Filamentbruch) oder > 5000 (Duese verstopft) aktiviert. Doppelte Pause, damit Kopf von Druck wegfaehrt


V 0.91.48 (2014-11-24)
- Adding of M3105, which allows to specify the movement after pause in [mm].
  - M3102 remains available and allows to specify the movement after pause in [steps].
- After the heat bed scan the heating bed is moved down a little bit in order to avoid accidental collisions with the extruder during the next homing.
- In case the hardware button "Pause" was pressed during the homing of the printer, the firmware could end up in a hang.
- All heaters are turned off after the heat bed scan automatically.
- In case the current movement after pause is bigger than the remaining distance in x/y/z direction, the printer moves until the min/max position.
  - Before this version, no movement into the according direction was performed in such a case.
- Cleanup of the delays for the external EEPROM.
- The calculation of the z-compensation has been moved from the previously used interrupt routine to the main loop.
- The homing-order at the beginning of the heat bed scan has been changed to the standard homing order.
- The automatic object output now can be configured via the OUTPUT_OBJECT_SCRIPT script.
  - M3104 has been removed because all of its functionality is replaced through the OUTPUT_OBJECT_SCRIPT script now.
- Adding of FEATURE_ALLOW_UNKNOWN_POSITIONS.
  - In case this #define is not 1, the "Position X/Y/Z" menu allows to move into the x/y/z direction only when the homing position is known.
- In case the "Position X/Y/Z" menu is used in order to change the position manually, the displayed position does not change anymore when the printer has reached its minimal/maximal position.